# LSASS-Dump-with-Indirect-SysCalls

./: Cargo.toml
src/: main.rs
