[package]
name = "LSASS_Dump_with_Indirect_Syscalls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_syscalls = {git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"]}
winapi = {version = "0.3.9", features = ["ntdef", "winnt", "fileapi", "winbase"]}
ntapi = "0.4.0"